--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "dependencies": {
     "flow-bin": "^0.56.0",
     "material-ui": "^0.19.3",
+    "mobx": "^3.3.1",
+    "mobx-react": "^4.3.3",
     "mobx-state-tree": "^1.0.1",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
