--- a/package.json
+++ b/package.json
@@ -5,16 +5,20 @@
   "dependencies": {
     "browser-info": "^1.1.1",
     "flow-bin": "^0.56.0",
+    "html2canvas": "^0.5.0-beta4",
+    "material-ui": "next",
+    "material-ui-icons": "^1.0.0-beta.15",
     "mobx": "^3.3.1",
     "mobx-react": "^4.3.3",
     "mobx-state-tree": "^1.0.1",
-    "material-ui": "next",
-    "material-ui-icons": "^1.0.0-beta.15",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
     "react-portal": "next",
     "react-scripts": "1.0.14",
     "styled-components": "^2.2.1"
+  },
+  "devDependencies": {
+    "standard": "^10.0.3"
   },
   "scripts": {
     "start": "react-scripts start",
