--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "brandembassy/what-the-bug",
+  "name": "what-the-bug",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
