--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "react-dom": "^16.0.0",
     "react-portal": "next",
     "react-scripts": "1.0.14",
-    "styled-components": "^2.2.1"
+    "styled-components": "^2.2.1",
+    "typeface-roboto": "^0.0.35"
   },
   "devDependencies": {
     "standard": "^10.0.3"
