--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-dom": "^16.0.0",
     "react-portal": "next",
     "react-scripts": "1.0.14",
+    "react-swipeable-views": "^0.12.8",
     "styled-components": "^2.2.1",
     "typeface-roboto": "^0.0.35"
   },
