--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "typeface-roboto": "^0.0.35"
   },
   "devDependencies": {
+    "babel-cli": "^6.26.0",
     "babel-eslint": "^8.0.1",
+    "babel-preset-react-app": "^3.0.3",
     "standard": "^10.0.3"
   },
   "standard": {
@@ -30,6 +32,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
-    "flow": "flow"
+    "flow": "flow",
+    "compile": "NODE_ENV=production babel -d dist/ src/ --presets react-app"
   }
 }
