--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "b64-to-blob": "^1.2.19",
     "browser-info": "^1.1.1",
     "flow-bin": "^0.56.0",
     "html2canvas": "^0.5.0-beta4",
